@@ -635,7 +635,19 @@ extern "C"
 #endif
 
 /* Declared in private.c */
-  void ptw32_throw (DWORD exception);
+#ifdef _MSC_VER
+/*
+ * Ignore the warning:
+ * "C++ exception specification ignored except to indicate that
+ * the function is not __declspec(nothrow)."
+ */
+#pragma warning(disable:4290)
+#endif
+  void ptw32_throw (DWORD exception)
+#ifdef __CLEANUP_CXX
+    throw(ptw32_exception_cancel,ptw32_exception_exit)
+#endif
+;
 
 #ifdef __cplusplus
 }
